--- a/webserver.conf
+++ b/webserver.conf
@@ -1,9 +1,10 @@
 server {
-    server_name domain.com;
-    root /var/www/domain.com/public;
-    index index.php index.html;
+    listen 80;
+    server_name domain.com www.domain.com;
 
     location / {
+        root /var/www/domain.com/public;
+        index index.php index.html;
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
@@ -11,13 +12,13 @@ server {
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
         fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
-        fastcgi_split_path_info ^(.+`.php)(/.+)$;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location ~/\.ht {
+    location ~ /\.ht {
         deny all;
     }
 }
